# ceva-bno08x

./: .gitignore  Cargo.toml  README.md
spi_attempt/src/: error.rs  lib.rs
spi_attempt/src/data/: mod.rs
spi_attempt/src/register/: mod.rs
src/: lib copy 2.rs  lib copy.rs  lib.rs
src/config/: mod.rs
src/data/: mod.rs
src/frs/: mod.rs
src/parsing/: mod.rs
src/register/: mod.rs
src/sensors/: mod.rs
