[package]
name = "ceva-bno08x"
version = "0.0.0"
description = "Temporary Placeholder for upcoming project"
readme = "README.md"
keywords = []
repository = "https://github.com/xephyris/ceva-bno08x"
license-file = "LICENSE"
authors = ["xephyris"]
edition = "2024"

[dependencies]
defmt = "1.0.1"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["defmt", "defmt-error", "print-defmt"] }

[features]
